manifests/base/ad/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: adservice
  namespace: adservice
spec:
  workloadSelector:
    labels:
      app: adservice
  egress:
    - hosts:
        - "istio-system/*"
